Logo Universidad y Menu
Se adiciono al Ovi logo de la universidad y menu

--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -1,6 +1,10 @@
-body{
+* {
     margin: 0;
     padding: 0;
-background: url(../img/imagenIndex.PNG) no-repeat fixed center center;
+    border: 0;
+  }
 
+
+header{
+    background: #005883;
 }
