--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -1,10 +1,76 @@
 * {
     margin: 0;
-    padding: 0;
+    padding: 0;   /* estilos desde Cero*/
     border: 0;
   }
 
+body {
+    background: white;  /* fondo principal*/
+}
 
 header{
-    background: #005883;
+  background: #005883;
+  width: 100%;    /* largo*/
+  height: 350px;   /* tamaño header*/
 }
+
+header #logo img{
+  margin: 45px;  /* distancia margen logo*/
+  float: left;  /* flotar el logo a la izquierda*/
+  width: 360px; /* tamaño logo*/
+}
+
+nav {
+  float: right;      /* flotar a la derecha la navecacion*/
+  padding: 0px 15px 0px 0px;  /* margenes de la navegacion*/
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background: #F0B429;
+  color: white;
+  border-radius: 15px;
+  
+}
+
+
+nav ul li {
+  font-size: 200%;
+  display: inline-block;  /* navecion en linea*/
+  padding: 15px;    /* distancia entre item de navegacion*/
+    
+}
+
+header div h2{
+  font-size: 40px;
+  color: white;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+header div h1{
+  font-size: 50px;
+  color: white;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ 
+ 
+}
+header div h3{
+  font-size: 30px;
+  color: white;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+ul {
+  list-style: none;
+}
+
+footer {
+  background: #005883;
+  width: 100%;
+  overflow: auto;
+  color: white;
+}
+
+
+nav li {
+  text-align: center;
+ 
+}
+
