--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -4,73 +4,199 @@
     border: 0;
   }
 
-body {
-    background: white;  /* fondo principal*/
-}
-
-header{
+ body{
   background: #005883;
-  width: 100%;    /* largo*/
-  height: 350px;   /* tamaño header*/
-}
+  font-family: sans-serif;
+  margin: 0 auto;
+ }
+
+ header{
+   background: #005883;
+   padding: 1% 0% 0% 1%;
+   
+ }
+
 
 header #logo img{
-  margin: 45px;  /* distancia margen logo*/
+    
   float: left;  /* flotar el logo a la izquierda*/
   width: 360px; /* tamaño logo*/
+  background: #005883;  
+  padding: 1% 0% 0% 0%; /* distancia margen logo*/
 }
 
-nav {
-  float: right;      /* flotar a la derecha la navecacion*/
-  padding: 0px 15px 0px 0px;  /* margenes de la navegacion*/
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  background: #F0B429;
-  color: white;
-  border-radius: 15px;
+section #logoSeguridad img{
+    
+  width: 50%; /* tamaño logo*/
+  margin:0px auto;
+	display:block;
+  
   
 }
 
 
-nav ul li {
-  font-size: 200%;
-  display: inline-block;  /* navecion en linea*/
-  padding: 15px;    /* distancia entre item de navegacion*/
-    
-}
 
 header div h2{
-  font-size: 40px;
+  font-size: 35px;
   color: white;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
+  font-family:  sans-serif;
+  
 }
 header div h1{
-  font-size: 50px;
+  font-size: 45px;
   color: white;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
- 
+  font-family:  sans-serif;
  
 }
 header div h3{
-  font-size: 30px;
+  font-size: 25px;
   color: white;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: sans-serif;
+ 
 }
 
-ul {
+#div-titulo{
+  padding: 7% 0% 0% 0%;
+  float: left;
+   
+}
+
+.lecturas {
+
+  width: 70%;
+  float: left;
+  padding: 2% 1% 1% 1%;
+  text-align: justify;
+  background: white;
+  border-radius: 15px;
+  margin: 15px 15px 50px 15px;
+  
+}
+
+.twiter {
+
+  width: 22%;
+  float: right;
+  padding: 2% 1% 1% 1%;
+  background: #F0B429;
+  border-radius: 15px;
+  margin: 17px 15px 0px 0px;
+    
+}
+
+.contador {
+
+  float: right;
+  background: #F0B429;
+  margin: 3% 7% 1% 1%;
+  
+}
+
+
+
+
+footer {
+  background:  #F0B429;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  color: white;
+}
+
+#footerP{
+  font-family: 'Franklin Gothic Medium';
+  font-size: 105%;
+  margin: 0.5% 1% 0% 1%;
+
+}
+
+section p{
+
+  font-size: 125%;
+  font-family: sans-serif;
+  color: #34495e;
+
+}
+
+section h3{
+  font-size: 130%;
+  font-family: sans-serif;
+  font-weight: 1000;
+  color:#F0B429;
+  text-align: center;
+  margin: 1% 0% 3% 0%;
+
+}
+
+section h4{
+  font-size: 150%;
+  font-family: sans-serif;
+  font-weight: 1000;
+  color:#005883;
+  text-align: center;
+;
+
+}
+
+.navegacion li a{
+ background-color: #F0B429;
+ font-family: sans-serif;
+ color: white;
+ text-decoration: none;
+ display:inline-block;
+ border-radius: 20px;
+ padding: 10px 15px;
+ text-align: center;
+
+}
+.navegacion{
+  float: right;
+}
+
+.navegacion li a:hover{
+  background-color: #005883;
+}
+
+ul,ol{
   list-style: none;
 }
 
-footer {
-  background: #005883;
-  width: 100%;
-  overflow: auto;
-  color: white;
-}
-
-
-nav li {
-  text-align: center;
+.navegacion li ul{
+  display: none;
+  position: absolute;
  
 }
+
+nav ul li {
+ 
+  display: inline-block;  /* navecion en linea*/
+    
+}
+.navegacion li:hover>ul{
+  display: block;
+}
+
+nav {
+  float: right;      /* flotar a la derecha la navecacion*/
+  font-family: sans-serif;
+  font-weight: 540;
+  padding: 0% 0% 0% 0%;   
+  margin: 1% 1% 0% 0%; /* margenes de la navegacion*/
+  
+}
+
+nav ul li ul li{
+  display: block;
+  margin: 5px;
+  
+
+  
+
+ 
+
+}
+
+
+
 
